fix gaps in applicant card

--- a/src/components/main/applicants/applicants-card/toggling-button/index.module.css
+++ b/src/components/main/applicants/applicants-card/toggling-button/index.module.css
@@ -23,7 +23,6 @@
 .deleteButton {
   box-shadow: none !important;
   padding: 10px 20px !important;
-  background-color: var(--main-grey) !important;
   font-size: 16px !important;
   font-style: normal !important;
   font-family: "YS Text" !important;
@@ -31,11 +30,7 @@
   line-height: 20px !important;
   text-transform: initial !important;
   border-radius: 6px !important;
-  color: var(--main-black-500) !important;
   opacity: 1 !important;
   transform: opacity ease 1s !important;
-}
-
-.deleteButton:hover {
-    opacity: .8 !important;
+  border: 1px solid var(--main-blue-main, #1d6bf3) !important;
 }
